# swiss-cheese

./: README.md  marketplace.json
.claude-plugin/: marketplace.json
swiss-cheese/: plugin.json
swiss-cheese-verifier/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
swiss-cheese-verifier/agents/: __init__.py  definitions.py
swiss-cheese-verifier/gates/: __init__.py  base.py  review.py  static_analysis.py  tdd.py
swiss-cheese-verifier/orchestrator/: __init__.py  core.py  scheduler.py  toml_parser.py
swiss-cheese-verifier/reports/: __init__.py  generator.py
swiss-cheese-verifier/tests/: __init__.py  test_scheduler.py  test_toml_parser.py
swiss-cheese-verifier/worktree/: __init__.py  manager.py
swiss-cheese/.claude-plugin/: plugin.json
swiss-cheese/agents/: 01-requirements.md  02-architecture.md  03-tdd.md  04-implementation.md  05-static-analysis.md  06-formal-verification.md  07-dynamic-analysis.md  08-review.md  09-safety.md  architecture-agent.md  dynamic-analysis-agent.md  formal-verification-agent.md  implementation-agent.md  orchestrator-architect.md  requirements-agent.md  review-agent.md  safety-agent.md  static-analysis-agent.md  tdd-agent.md
swiss-cheese/commands/: cancel.md  gate.md  loop.md  safe-rust.md  skip-layer.md  status.md  swiss-cheese.md
swiss-cheese/examples/: example_project.toml
swiss-cheese/hooks/: hooks.json  notification.py  orchestrate.py  post_edit.py  pre_bash.py  pre_edit.py  schema.py  stop.py
swiss-cheese/skills/: design-review.md  gate-validation.md  safe-rust-patterns.md  (+2 more)
(+6 files in other folders)
